Se añadio la barra en el menu que informa la puntuacion y el nivel

--- a/scss/styles/menu.scss
+++ b/scss/styles/menu.scss
@@ -1,13 +1,63 @@
+.labelHeader{
+	background: #6DBDBE;
+	// border: 1px solid #B6F9FB;
+	border-radius: 4px;
+	box-shadow: 0px 0px 1px 0px #194F50;
+	margin: 7px;
+}
+
+.labelText{
+    text-shadow: 0px 0px 5px #194F50;
+	color: #FEFEFE;
+}
+
 .body{
 	position: absolute;
 	background-image: url( "../img/background/esteFondo.jpg");
 	background-size: cover;
 
+	.score{
+		background: $colorButtons;
+	    height: 42px;
+	    @include box-shadow(-1px -1px 12px 1px $colorButtons);
+	    
+		.numberCruz{
+			float: right;
+		    padding: 5px 3px 1px 0px;
+			@extend .labelHeader;
+			img{
+				width: 20px;
+				margin: -3px 4px;
+			}
+			.numberQuestionMenu{
+				@extend .fontsButton;
+				@extend .labelText;
+			}
+		}
+		.numberLevel{
+			float: left;
+			@extend .fontsButton;
+			@extend .labelHeader;
+		    @extend .labelText;
+		    padding: 3px 5px 2px 5px;
+		    height: 28px;
+		    width: 81px;
+		    .textLevel{
+		    	font-size: 15px !important;
+		    	position: absolute;
+	    	    padding-top: 1px;
+		    }
+		    .numberLevelMenu{
+	    	    position: absolute;
+    			padding: 2px 0px 0px 58px;
+		    }
+		}
+	}
+
 	.image-fight{
 	  text-align: center;
 	  position: relative;
 	  padding-top: 36%;
-	  
 	}
 	.button-royal{
 		margin: 18px 40px;
