--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,5 +1,15 @@
 <ion-view>
    	<ion-content class="body">
+   		<div class="score">
+   			<div class="numberCruz">
+   				<img src="img/smallCruz.png" alt="">
+   				<span class="numberQuestionMenu">120</span>
+   			</div>
+   			<div class="numberLevel">
+   				<span class="textLevel">Nivel: </span>
+   				<span class="numberLevelMenu">5</span>
+   			</div>
+   		</div>
 	  	<div class="image-fight">
 	  	  <a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Jugar</a>
 	  	  <a class="button button-block button-royal" href="#/menu">Instrucciones</a>
