Init ranking order by questions correct and incorrect Added user information on menu

--- a/www/templates/completeQuestion.html
+++ b/www/templates/completeQuestion.html
@@ -5,7 +5,7 @@
 			<div class="infoAnswerQuestion">{{$root.answered.acerts}}/6</div>
 		</div>
 		<div class="cruz">
-			<div class="infoCruces">{{$root.totalQuestios}}</div>
+			<div class="infoCruces">{{$root.user.preguntasAcertadasT}}</div>
 		</div>
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
