--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -3,11 +3,11 @@
    		<div class="score">
    			<div class="numberCruz">
    				<img src="img/smallCruz.png" alt="">
-   				<span class="numberQuestionMenu">120</span>
+   				<span class="numberQuestionMenu">{{$root.user.preguntasAcertadasT}}</span>
    			</div>
    			<div class="numberLevel">
    				<span class="textLevel">Nivel: </span>
-   				<span class="numberLevelMenu">5</span>
+   				<span class="numberLevelMenu">{{$root.user.nivel}}</span>
    			</div>
    		</div>
 	  	<div class="image-fight">
