--- a/www/templates/menuMore.html
+++ b/www/templates/menuMore.html
@@ -2,7 +2,7 @@
 	<ion-content class="body">
 	  	<div class="image-fight">
 	  	  <a class="button button-block button-royal" href="#/trophies" data-ng-click="$root.reloadTrophies()">Trofeos</a>
-	  	  <a class="button button-block button-royal" href="#/menu">Ranking</a>
+	  	  <a class="button button-block button-royal" href="#/ranking">Ranking</a>
 	  	  <a class="button button-block button-royal" href="#/menu">About</a>
 	  	  <a class="button button-block button-royal" href="#/menu">Atras</a>
 	  	</div>
