--- a/www/templates/passLevel.html
+++ b/www/templates/passLevel.html
@@ -9,8 +9,8 @@
 		</div>
 		<div class="infoLevel">
 			<h2 class="largeText">Felicidades</h2>
-			<h3 class="smallText">Pasaste al nivel</h3>
-			<h2 class="numberLevel">2</h2>
+			<h3 class="smallText">Has pasado al nivel</h3>
+			<h2 class="numberLevel">{{$root.user.nivel}}</h2>
 		</div>
 		<div class="buttons">
 			<a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()" nav-direction="forward">Continuar</a>
