some styles to show app

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @import "scss/styles/completeQuestion";
 @import "scss/styles/trophies";
 @import "scss/styles/passLevel";
+@import "scss/styles/ranking";
