--- a/www/templates/menuMore.html
+++ b/www/templates/menuMore.html
@@ -3,8 +3,8 @@
 	  	<div class="image-fight">
 	  	  <a class="button button-block button-royal" href="#/trophies" data-ng-click="$root.reloadTrophies()">Trofeos</a>
 	  	  <a class="button button-block button-royal" href="#/ranking">Ranking</a>
-	  	  <a class="button button-block button-royal" href="#/menu">About</a>
-	  	  <a class="button button-block button-royal" href="#/menu">Atras</a>
+	  	  <a class="button button-block button-royal" href="#/menu">Acerca de</a>
+	  	  <a class="button button-block button-royal" href="#/menu">Atrás</a>
 	  	</div>
 	</ion-content>
 </ion-view>
