--- a/www/templates/trophies.html
+++ b/www/templates/trophies.html
@@ -28,8 +28,8 @@
   		  				</div>
   				    </div>
   		  		</div> -->
-	    <div ng-if="trophies === undefined">
-	    	Cargando
+	    <div class="load-trophies" ng-if="trophies === undefined">
+	    	Cargando...
 	    </div>
   	</ion-content>
 </ion-view>
