--- a/scss/styles/ranking.scss
+++ b/scss/styles/ranking.scss
@@ -1,6 +1,9 @@
 .image-avatar{
 	border-radius: 100%;
 	margin-top: 7px;
+	// width: 50px;
+	width: 60px;
+	padding-right: 10px;
 }
 
 .label-ranking{
@@ -17,12 +20,16 @@
 }
 
 .row{
-	margin: 0;
+	// margin: 0;
 	padding: 5px;
+	margin: 9px;
+    border: none;
+    border-radius: 50px;
+    background: rgba(255, 255, 255, 0.35);
+    width: inherit;
 }
 .row + .row{
-	margin: 0;
-	padding: 5px;
+	@extend .row;
 }
 
 .text-item-ranking{
@@ -31,3 +38,4 @@
 .bar.bar-royal{
 	background-color: #6DBDBF;
 }
+
