--- a/scss/styles/trophies.scss
+++ b/scss/styles/trophies.scss
@@ -8,10 +8,10 @@
 	@extend .fontsButton;
 	font-size: 23px !important;
     color: #fff;
-	.title{
-		
+	.title{	
 		text-align: center;
 		padding-top: 12px;
+        margin-right: 23px;
 	}
 }
 
@@ -59,4 +59,11 @@
             letter-spacing: 0.4px;
         }
     }
+}
+
+.load-trophies{
+    @extend .fontsButton;
+    color: #103333;
+    text-align: center;
+    font-size: 20px !important;
 }
