--- a/scss/styles/ranking.scss
+++ b/scss/styles/ranking.scss
@@ -1,13 +1,29 @@
-.image-avatar{
-	border-radius: 100%;
-	margin-top: 7px;
-	// width: 50px;
-	width: 60px;
-	padding-right: 10px;
+@mixin margin($backgroungAsk, $padding-right){
+	background: $backgroungAsk;
+	border: 2px solid #fff;
+	color: #fff;
+	border-radius: 50px;
+	padding: 2px $padding-right 2px 3px;
+	margin: 1px 2px 3px 15%;
+	font-size: 15px;
+	.ion-checkmark-circled, .ion-close-circled{
+		font-size: 19px;
+		position: absolute;
+	}
+	.num-result{
+		margin-left: 26px;
+	}
 }
 
-.label-ranking{
-	display: inline-block;
+.image-avatar{
+	border-radius: 100%;
+	margin: 7px 0px 0px 7px;
+	width: 60px;
+	border: 3px solid #fff;
+}
+
+.col{
+	padding: 0px;
 }
 
 .item-ranking{
@@ -15,27 +31,49 @@
 	border-top: 0px;
 }
 
-.item-user-ranking{
-	background: #aa1;
-}
-
 .row{
-	// margin: 0;
-	padding: 5px;
-	margin: 9px;
+	padding: 0px;
+	margin: 3%;
     border: none;
     border-radius: 50px;
     background: rgba(255, 255, 255, 0.35);
-    width: inherit;
+    width: 95%;
+    font-family: "Roboto-Black";
+    letter-spacing: 1.2px;
+    .position-rank{
+    	position: absolute;
+    	margin: 42px 0px 0px 45px;
+    	padding: 0px 4px 0px 5px !important;
+    	border: 3px solid #fff;
+    	border-radius: 100%;
+    	text-align: center;
+    	font-size: 16px;
+    	background: #5CDADC;
+    	color: #fff;   	
+    }   
+    .name-user{
+    	font-family: Roboto-Black;
+    	margin: 11px 17px 10px 15%;
+    	color: #fff;
+    	text-shadow: 0px 0px 6px #194F50;
+    	letter-spacing: 1.2px;
+    	overflow: hidden;
+    	height: 21px;
+    }
+    .ask-true{
+    	@include margin(#03A001, 0px);
+    }
+    .ask-false{
+    	@include margin(#E82222, 5px);
+    }
 }
 .row + .row{
 	@extend .row;
 }
 
-.text-item-ranking{
-	margin: 3px;
+.divisor{
+	height: 2px;
+	background: #A7DADB;
+	width: 80%;
+	margin: 0 0 0 10%;
 }
-.bar.bar-royal{
-	background-color: #6DBDBF;
-}
-
