--- a/www/css/style.css
+++ b/www/css/style.css
@@ -349,30 +349,73 @@
 
 .image-avatar {
   border-radius: 100%;
-  margin-top: 7px;
+  margin: 7px 0px 0px 7px;
   width: 60px;
-  padding-right: 10px; }
+  border: 3px solid #fff; }
 
-.label-ranking {
-  display: inline-block; }
+.col {
+  padding: 0px; }
 
 .item-ranking {
   border: 1px solid;
   border-top: 0px; }
 
-.item-user-ranking {
-  background: #aa1; }
-
 .row, .row + .row {
-  padding: 5px;
-  margin: 9px;
+  padding: 0px;
+  margin: 3%;
   border: none;
   border-radius: 50px;
   background: rgba(255, 255, 255, 0.35);
-  width: inherit; }
+  width: 95%;
+  font-family: "Roboto-Black";
+  letter-spacing: 1.2px; }
+  .row .position-rank, .row + .row .position-rank {
+    position: absolute;
+    margin: 42px 0px 0px 45px;
+    padding: 0px 4px 0px 5px !important;
+    border: 3px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 16px;
+    background: #5CDADC;
+    color: #fff; }
+  .row .name-user, .row + .row .name-user {
+    font-family: Roboto-Black;
+    margin: 11px 17px 10px 15%;
+    color: #fff;
+    text-shadow: 0px 0px 6px #194F50;
+    letter-spacing: 1.2px;
+    overflow: hidden;
+    height: 21px; }
+  .row .ask-true, .row + .row .ask-true {
+    background: #03A001;
+    border: 2px solid #fff;
+    color: #fff;
+    border-radius: 50px;
+    padding: 2px 0px 2px 3px;
+    margin: 1px 2px 3px 15%;
+    font-size: 15px; }
+    .row .ask-true .ion-checkmark-circled, .row + .row .ask-true .ion-checkmark-circled, .row .ask-true .ion-close-circled, .row + .row .ask-true .ion-close-circled {
+      font-size: 19px;
+      position: absolute; }
+    .row .ask-true .num-result, .row + .row .ask-true .num-result {
+      margin-left: 26px; }
+  .row .ask-false, .row + .row .ask-false {
+    background: #E82222;
+    border: 2px solid #fff;
+    color: #fff;
+    border-radius: 50px;
+    padding: 2px 5px 2px 3px;
+    margin: 1px 2px 3px 15%;
+    font-size: 15px; }
+    .row .ask-false .ion-checkmark-circled, .row + .row .ask-false .ion-checkmark-circled, .row .ask-false .ion-close-circled, .row + .row .ask-false .ion-close-circled {
+      font-size: 19px;
+      position: absolute; }
+    .row .ask-false .num-result, .row + .row .ask-false .num-result {
+      margin-left: 26px; }
 
-.text-item-ranking {
-  margin: 3px; }
-
-.bar.bar-royal {
-  background-color: #6DBDBF; }
+.divisor {
+  height: 2px;
+  background: #A7DADB;
+  width: 80%;
+  margin: 0 0 0 10%; }
