Popups de tiempo y de trofeo

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,6 @@
 @import "scss/styles/completeQuestion";
 @import "scss/styles/trophies";
 @import "scss/styles/passLevel";
+@import "scss/styles/popupTime";
+@import "scss/styles/popupThropies";
 @import "scss/styles/ranking";
