--- a/www/templates/ranking.html
+++ b/www/templates/ranking.html
@@ -1,7 +1,7 @@
 <ion-view>
   	<ion-content class="body body-ranking">
         <div class="score">
-            <div class="return-menu"><</div>
+            <div class="return-menu"> <i  class="ion-chevron-left"></i> </div>
             <div class="text-header">
                 <p class="title">Ranking</p>
             </div>
