--- a/www/css/style.css
+++ b/www/css/style.css
@@ -281,7 +281,7 @@
   float: left;
   padding: 11px 0 0px 15px;
   color: #fff;
-  font-size: 24px; }
+  font-size: 21px; }
 
 .text-header {
   font-size: 23px !important;
@@ -346,6 +346,41 @@
     font-size: 45px; }
   .infoLevel .smallText {
     font-size: 19px; }
+
+.popupTime {
+  background: rgba(0, 0, 0, 0.39); }
+  .popupTime .popup {
+    background: rgba(221, 221, 221, 0); }
+  .popupTime .pop-img-time {
+    width: 50%; }
+  .popupTime .pop-text-time {
+    font-size: 30px;
+    text-align: center;
+    font-family: "Roboto-Black";
+    letter-spacing: 1.0px;
+    color: #FFFFFF;
+    text-shadow: 0px 0px 25px #545454, 0px 0px 15px #000000; }
+
+.popup-buttons, .popup-head {
+  display: none; }
+
+.popupThropies {
+  background: rgba(0, 0, 0, 0.39); }
+  .popupThropies .popup {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.57); }
+  .popupThropies .pop-img-thropie {
+    width: 31%; }
+  .popupThropies .pop-text-thropie {
+    width: 60%;
+    float: right;
+    font-size: 19px;
+    padding: 2% 7% 0px 0px;
+    text-align: center;
+    font-family: "Roboto-Black";
+    letter-spacing: 1.2px;
+    color: #F2F2F3;
+    text-shadow: 0px 0px 25px #545454, 0px 0px 15px #000000; }
 
 .image-avatar {
   border-radius: 100%;
