Genenal fixes show trophies popup and set on BD

--- a/scss/styles/completeQuestion.scss
+++ b/scss/styles/completeQuestion.scss
@@ -35,7 +35,7 @@
 	width: 150px;
   height: 150px;
   background-size: contain;
-  margin: 0 auto;
+  margin: 13vh auto;
   
    	.infoCruces{
    		@extend .fontsButton;
