--- a/scss/styles/trophies.scss
+++ b/scss/styles/trophies.scss
@@ -65,5 +65,7 @@
     @extend .fontsButton;
     color: #103333;
     text-align: center;
-    font-size: 20px !important;
+    position: relative;
+    top: 42vh;
+    font-size: 25px !important;
 }
