--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,7 +19,7 @@
   position: absolute;
   z-index: 3; }
 
-.fontsButton, .body .button-assertive, .body .score .numberCruz .numberQuestionMenu, .body .score .numberLevel, .body .button-royal, .barQuestion .infoAnswerQuestion, .cruz .infoCruces, .text-header, .trophies-tag .trophies-descpt .title-trophies, .load-trophies {
+.fontsButton, .body .button-assertive, .score .numberCruz .numberQuestionMenu, .score .numberLevel, .body .button-royal, .barQuestion .infoAnswerQuestion, .cruz .infoCruces, .text-header, .trophies-tag .trophies-descpt .title-trophies, .load-trophies {
   font-family: "Roboto-Black";
   font-size: 19px;
   letter-spacing: 1.2px; }
@@ -29,60 +29,64 @@
   background-size: cover; }
   .body .character {
     width: 55%;
-    margin: 13% 25%; }
+    margin: 0 auto;
+    margin-top: 24%;
+    position: relative;
+    top: 15px; }
     .body .character img {
       width: 100%; }
   .body .button-assertive {
-    margin: 18px 40px; }
+    margin: 0 40px 18px; }
   .body .shields {
     margin: 10px 20%;
     width: 62%; }
     .body .shields img {
       width: 31%; }
 
-.labelHeader, .body .score .numberCruz, .body .score .numberLevel {
+.labelHeader, .score .numberCruz, .score .numberLevel {
   background: #6DBDBE;
   border-radius: 4px;
   box-shadow: 0px 0px 1px 0px #194F50;
   margin: 7px; }
 
-.labelText, .body .score .numberCruz .numberQuestionMenu, .body .score .numberLevel {
+.labelText, .score .numberCruz .numberQuestionMenu, .score .numberLevel {
   text-shadow: 0px 0px 5px #194F50;
   color: #FEFEFE; }
+
+.score {
+  background: #194F50;
+  height: 42px;
+  -webkit-box-shadow: -1px -1px 12px 1px #194F50;
+  -moz-box-shadow: -1px -1px 12px 1px #194F50;
+  box-shadow: -1px -1px 12px 1px #194F50; }
+  .score .numberCruz {
+    float: right;
+    padding: 5px 3px 1px 0px;
+    width: 65px; }
+    .score .numberCruz img {
+      width: 20px;
+      margin: -3px 4px; }
+  .score .numberLevel {
+    float: left;
+    padding: 3px 5px 2px 5px;
+    height: 28px;
+    width: 81px; }
+    .score .numberLevel .textLevel {
+      font-size: 15px !important;
+      position: absolute;
+      padding-top: 1px; }
+    .score .numberLevel .numberLevelMenu {
+      position: absolute;
+      padding: 2px 0px 0px 58px; }
 
 .body {
   position: absolute;
   background-image: url("../img/background/esteFondo.jpg");
   background-size: cover; }
-  .body .score {
-    background: #194F50;
-    height: 42px;
-    -webkit-box-shadow: -1px -1px 12px 1px #194F50;
-    -moz-box-shadow: -1px -1px 12px 1px #194F50;
-    box-shadow: -1px -1px 12px 1px #194F50; }
-    .body .score .numberCruz {
-      float: right;
-      padding: 5px 3px 1px 0px;
-      width: 65px; }
-      .body .score .numberCruz img {
-        width: 20px;
-        margin: -3px 4px; }
-    .body .score .numberLevel {
-      float: left;
-      padding: 3px 5px 2px 5px;
-      height: 28px;
-      width: 81px; }
-      .body .score .numberLevel .textLevel {
-        font-size: 15px !important;
-        position: absolute;
-        padding-top: 1px; }
-      .body .score .numberLevel .numberLevelMenu {
-        position: absolute;
-        padding: 2px 0px 0px 58px; }
   .body .image-fight {
     text-align: center;
     position: relative;
-    padding-top: 36%; }
+    padding-top: 20vh; }
   .body .button-royal {
     margin: 18px 40px;
     background-color: #194F50;
@@ -177,7 +181,7 @@
       font-size: 17px; }
 
 .passLevelMargin {
-  margin: 0% 25% !important; }
+  margin: 0% 22% !important; }
 
 .text, .infoLevel .largeText, .infoLevel .numberLevel, .infoLevel .smallText {
   letter-spacing: 1.2px;
@@ -270,7 +274,7 @@
   width: 150px;
   height: 150px;
   background-size: contain;
-  margin: 0 auto; }
+  margin: 13vh auto; }
   .cruz .infoCruces {
     color: #194F50;
     padding: 67px 52px;
@@ -327,10 +331,12 @@
 .load-trophies {
   color: #103333;
   text-align: center;
-  font-size: 20px !important; }
+  position: relative;
+  top: 42vh;
+  font-size: 25px !important; }
 
 .passLevelMargin {
-  margin: 0% 25% !important; }
+  margin: 0% 22% !important; }
 
 .text, .infoLevel .largeText, .infoLevel .numberLevel, .infoLevel .smallText {
   letter-spacing: 1.2px;
@@ -365,10 +371,10 @@
   display: none; }
 
 .popupThropies {
-  background: rgba(0, 0, 0, 0.39); }
+  background: rgba(0, 0, 0, 0.79); }
   .popupThropies .popup {
     border-radius: 10px;
-    background: rgba(0, 0, 0, 0.57); }
+    background: rgba(156, 156, 156, 0.65); }
   .popupThropies .pop-img-thropie {
     width: 31%; }
   .popupThropies .pop-text-thropie {
@@ -381,6 +387,9 @@
     letter-spacing: 1.2px;
     color: #F2F2F3;
     text-shadow: 0px 0px 25px #545454, 0px 0px 15px #000000; }
+
+.body-ranking {
+  top: 42px; }
 
 .image-avatar {
   border-radius: 100%;
