--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,8 +12,9 @@
    		</div>
 	  	<div class="image-fight">
 	  	  <a class="button button-block button-royal" href="#/questions" data-ng-click="$root.loadNextQuestion()">Jugar</a>
-	  	  <a class="button button-block button-royal" href="#/menu">Instrucciones</a>
-	  	  <a class="button button-block button-royal" href="#/menuMore">Más</a>
+        <a class="button button-block button-royal" href="#/trophies" data-ng-click="$root.reloadTrophies()">Trofeos</a>
+        <a class="button button-block button-royal" href="#/ranking">Ranking</a>
+        <a class="button button-block button-royal" href="#/menu">Acerca de</a>
 	  	</div>
 	</ion-content>
 </ion-view>
