--- a/www/templates/passLevel.html
+++ b/www/templates/passLevel.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-content class="body" scroll="false">
+	<ion-content class="body">
 		<div class="barQuestion">
 			<div class="barAnswerPass"></div>
 			<div class="infoAnswerQuestion">6/6</div>
