Added and configure winnner view added about view

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,4 @@
 @import "scss/styles/popupTime";
 @import "scss/styles/popupThropies";
 @import "scss/styles/ranking";
+@import "scss/styles/winner";
