--- a/scss/styles/general.scss
+++ b/scss/styles/general.scss
@@ -18,3 +18,15 @@
 	font-size: 19px;
 	letter-spacing: 1.2px;
 }
+
+// about styles
+.cardAbout{
+	width: 90%;
+    height: 90%;
+    margin: 6% auto;
+    padding: 20px;
+    color: #FFF;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 6px;
+   	font-size: 18px
+}
