--- a/scss/styles/trophies.scss
+++ b/scss/styles/trophies.scss
@@ -66,6 +66,6 @@
     color: #103333;
     text-align: center;
     position: relative;
-    top: 42vh;
+    top: 45%;
     font-size: 25px !important;
 }
