--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,6 +24,16 @@
   font-size: 19px;
   letter-spacing: 1.2px; }
 
+.cardAbout {
+  width: 90%;
+  height: 90%;
+  margin: 6% auto;
+  padding: 20px;
+  color: #FFF;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 6px;
+  font-size: 18px; }
+
 .body {
   background-image: url("../img/background/esteFondo.jpg");
   background-size: cover; }
@@ -62,7 +72,7 @@
   .score .numberCruz {
     float: right;
     padding: 5px 3px 1px 0px;
-    width: 65px; }
+    min-width: 75px; }
     .score .numberCruz img {
       width: 20px;
       margin: -3px 4px; }
@@ -86,7 +96,7 @@
   .body .image-fight {
     text-align: center;
     position: relative;
-    padding-top: 20vh; }
+    padding-top: 30%; }
   .body .button-royal {
     margin: 18px 40px;
     background-color: #194F50;
@@ -179,6 +189,10 @@
       min-height: 55px;
       padding: 16px 16px;
       font-size: 17px; }
+
+.bodyQuestions {
+  min-height: 100%;
+  min-width: 100%; }
 
 .passLevelMargin {
   margin: 0% 22% !important; }
@@ -274,7 +288,7 @@
   width: 150px;
   height: 150px;
   background-size: contain;
-  margin: 13vh auto; }
+  margin: 20% auto; }
   .cruz .infoCruces {
     color: #194F50;
     padding: 67px 52px;
@@ -332,7 +346,7 @@
   color: #103333;
   text-align: center;
   position: relative;
-  top: 42vh;
+  top: 45%;
   font-size: 25px !important; }
 
 .passLevelMargin {
@@ -390,6 +404,8 @@
 
 .body-ranking {
   top: 42px; }
+  .body-ranking .scroll {
+    height: 100%; }
 
 .image-avatar {
   border-radius: 100%;
@@ -441,9 +457,10 @@
     font-size: 15px; }
     .row .ask-true .ion-checkmark-circled, .row + .row .ask-true .ion-checkmark-circled, .row .ask-true .ion-close-circled, .row + .row .ask-true .ion-close-circled {
       font-size: 19px;
-      position: absolute; }
+      position: relative;
+      top: 2px; }
     .row .ask-true .num-result, .row + .row .ask-true .num-result {
-      margin-left: 26px; }
+      margin-left: 6px; }
   .row .ask-false, .row + .row .ask-false {
     background: #E82222;
     border: 2px solid #fff;
@@ -454,12 +471,21 @@
     font-size: 15px; }
     .row .ask-false .ion-checkmark-circled, .row + .row .ask-false .ion-checkmark-circled, .row .ask-false .ion-close-circled, .row + .row .ask-false .ion-close-circled {
       font-size: 19px;
-      position: absolute; }
+      position: relative;
+      top: 2px; }
     .row .ask-false .num-result, .row + .row .ask-false .num-result {
-      margin-left: 26px; }
+      margin-left: 6px; }
 
 .divisor {
   height: 2px;
   background: #A7DADB;
   width: 80%;
   margin: 0 0 0 10%; }
+
+.winner-title {
+  position: relative;
+  top: 15px;
+  padding: 5px 0 0 0; }
+
+.winner-button {
+  margin: 0 40px 24px 40px !important; }
